# ynab-mcp-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  GEMINI.md  LICENSE  README.md  pyproject.toml  sample.env
.gemini/: settings.json
.github/workflows/: main.yml
docs/: product.md  requirements.md  structure.md
docs/specs/: README.md  wip.md
docs/specs/01-lookup-all-budgets/: design.md  requirements.md  tasks.md
docs/specs/template/: design.md  requirements.md  tasks.md
fastmcp/experimental/utilities/openapi/: parser.py  schemas.py  schemas_patch.py  test_schemas_patch.py
src/ynab_mcp_python/: main.py  server.py
src/ynab_mcp_server/: main.py
tests/: test_budgets.py
