[project]
name = "ynab-mcp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Arturo Cabral Mejía",email = "me@ricardocabral.io"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "ynab-api (>=2.0.2,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
