[project]
name = "ynab-mcp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Arturo Cabral Mejía",email = "me@ricardocabral.io"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastmcp (>=2.11.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
black = "^25.1.0"
pre-commit = "^4.2.0"
mdformat = "^0.7.16"
mdformat-pyproject = "^0.0.2"
httpx = "^0.28.1"
poethepoet = "^0.25.0"
types-pyyaml = "^6.0.12.20250516"

[tool.mdformat]
wrap = 120
number = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.poe.tasks]
build-image = { shell = "podman build -t ynab-mcp-python ." }
